Can build plugin registry from directory.