@@ -9,9 +9,7 @@ import java.net.URLClassLoader;
 import java.util.HashMap;
 import java.util.Map;
 
-/**
- * Created by beefhead on 6/14/2017.
- */
+
 
 public class PluginRegistry {
     private static IPersistencePlugin loadedPlugin = null;
@@ -23,15 +21,19 @@ public class PluginRegistry {
         for(File f : fileList){
             try {
                 URLClassLoader loader = URLClassLoader.newInstance(new URL[] {
-                        new URL(f.getAbsolutePath())
+                        f.toURI().toURL()
                 });
+
                 String classname = f.getName();
                 classname = classname.substring(0,classname.length()-4);
-                Class fileClass  = loader.loadClass(classname);
-                IPersistencePlugin a = (IPersistencePlugin) fileClass.newInstance();
-            } catch (MalformedURLException | ClassNotFoundException | InstantiationException e) {
-                e.printStackTrace();
-            } catch (IllegalAccessException e) {
+                String pluginName = "plugin." + classname;
+
+                Class fileClass  = loader.loadClass(pluginName);
+                IPersistencePlugin plugin = (IPersistencePlugin) fileClass.newInstance();
+
+                availablePlugins.put(classname,plugin);
+
+            } catch (MalformedURLException | ClassNotFoundException | InstantiationException | IllegalAccessException e) {
                 e.printStackTrace();
             }
         }
